--- a/css/theme.css
+++ b/css/theme.css
@@ -11,14 +11,22 @@
   --base2:     #eee8d5; /* light bg (avoid) */
   --base3:     #fdf6e3;
 
+  /* Warning */
+  --green:     #859900;
   --yellow:    #b58900;
   --orange:    #cb4b16;
+
+  /* Danger */
   --red:       #dc322f;
   --magenta:   #d33682;
+
+  /* Info */
   --violet:    #6c71c4;
   --blue:      #268bd2;
+
+  /* Success */
   --cyan:      #2aa198;
-  --green:     #859900;
+
 
   --background: var(--base03);
   --background-highlight: var(--base02);
@@ -27,5 +35,5 @@
   --accent: var(--cyan);
   --primary: var(--violet);
   --selected: var(--blue);
-  --hover: var(--base00);
+  --hover: var(--violet);
 }
