--- a/src/plug-ins/connection/style.css
+++ b/src/plug-ins/connection/style.css
@@ -1,3 +1,11 @@
+/* Temp Connection Line */
+.ghost-line {
+  stroke: var(--orange);
+  stroke-width: 4;
+  fill: none;
+  stroke-dasharray: 5, 5;
+  pointer-events: none;
+}
 
 /* Connection Path */
 .connection-path {
@@ -7,32 +15,29 @@
   stroke-linecap: round;
 }
 
-/* Temp Connection Line */
-.temp-line {
-  stroke: var(--orange);
-  stroke-width: 4;
-  fill: none;
-  stroke-dasharray: 5, 5;
-  pointer-events: none;
-}
 
-/* Labels */
-.label-text,
+
+/* Label */
 .connection-label {
   font-family: Arial, sans-serif;
   font-size: 14px;
   font-weight: bold;
+
   fill: var(--text);
-  text-anchor: middle;
+
   dominant-baseline: middle;
+
   paint-order: stroke fill;
+
   stroke: var(--background);
   stroke-width: 2;
   stroke-linejoin: round;
+
   cursor: pointer;
   letter-spacing: 0.01em;
-}
-
-.connection-label {
   stroke-width: 3;
+
+}
+.connection-label.connection-label-middle {
+  text-anchor: middle;
 }
