--- a/css/styles.css
+++ b/css/styles.css
@@ -6,47 +6,34 @@ body {
   background-color: var(--background);
 }
 
-
-
 /* TOOL MOdes*/
-svg[data-tool="select-tool"]{
-    cursor: default;
+svg[data-tool="select-tool"] {
+  cursor: default;
 }
-svg[data-tool="interact-tool"]{
-    cursor: pointer;
-}
-
-svg[data-tool="pan-zoom-tool"]{
-    cursor: all-scroll;
+svg[data-tool="interact-tool"] {
+  cursor: pointer;
 }
 
-svg[data-tool="connect-tool"]{
+svg[data-tool="pan-zoom-tool"] {
+  cursor: all-scroll;
+}
+
+svg[data-tool="connect-tool"] {
   cursor: crosshair;
 }
-svg[data-tool="disconnect-tool"]{
+svg[data-tool="disconnect-tool"] {
   cursor: crosshair;
 }
 
-svg[data-tool="delete-tool"]{
+svg[data-tool="delete-tool"] {
   cursor: no-drop;
 }
-svg[data-tool="zoom-in-tool"]{
+svg[data-tool="zoom-in-tool"] {
   cursor: zoom-in;
 }
-svg[data-tool="zoom-out-tool"]{
+svg[data-tool="zoom-out-tool"] {
   cursor: zoom-out;
 }
-
-
-
-
-
-
-
-
-
-
-
 
 .ui-container {
   display: flex;
@@ -75,7 +62,6 @@ svg[data-tool="zoom-out-tool"]{
   border: 2px solid var(--base02);
   overflow: hidden;
   background-color: var(--background);
-
 }
 
 svg {
@@ -117,32 +103,22 @@ svg:active {
   stroke-width: 1;
 }
 
-
-
-
-
-
-
-
-
-
 /* General Form Elements */
-input, select, textarea {
+input,
+select,
+textarea {
   background: var(--base03);
   border: 1px solid var(--border);
   color: var(--text);
   padding: 6px;
   border-radius: 4px;
 }
-input:focus, select:focus, textarea:focus {
+input:focus,
+select:focus,
+textarea:focus {
   outline: 2px solid var(--focus-ring);
   outline-offset: 1px;
 }
-
-
-
-
-
 
 .snapped-top {
   position: fixed;
@@ -165,57 +141,33 @@ input:focus, select:focus, textarea:focus {
   right: 1rem;
 }
 
-
-
-
-.toolbox {
-  background: var(--base02);
-  border: 1px solid var(--border);
-  z-index: 1000;
-  display: inline-block;
-
+.rounded {
+  border-radius: 4px;
 }
 
-.toolbox-vertical {
-
+.shadow {
+  box-shadow: 2px 2px 5px 2px rgba(0, 0, 0, 0.3);
 }
-.toolbox-horizontal {
-
-}
-
-.toolbox-header {
-
-}
-
-.toolbox-title {
-
-}
-
-.toolbox-body {
-
-}
-
 
 /* Button */
 
 button.btn {
   --my-btn-border-radius: 4px;
   --my-btn-padding-x: 0.25rem;
-  --my-btn-padding-y: 0.50rem;
+  --my-btn-padding-y: 0.5rem;
   --my-btn-margin-x: 0.1rem;
-  --my-btn-margin-y: 0.0rem;
+  --my-btn-margin-y: 0rem;
 }
 
 button.btn.btn-sm {
   --my-btn-border-radius: 4px;
   --my-btn-padding-x: 0.2rem;
-  --my-btn-padding-y: 0.30rem;
+  --my-btn-padding-y: 0.3rem;
   --my-btn-margin-x: 0.2rem;
-  --my-btn-margin-y: 0.0rem;
+  --my-btn-margin-y: 0rem;
 }
 
 button.btn {
-
   background: var(--base02);
   border: 1px solid var(--border);
   cursor: pointer;
@@ -227,7 +179,6 @@ button.btn {
   border-radius: var(--my-btn-border-radius);
   padding: var(--my-btn-padding-x) var(--my-btn-padding-y);
   margin: var(--my-btn-margin-x) var(--my-btn-margin-y);
-
 }
 
 button:hover {
@@ -239,4 +190,17 @@ button.btn.active {
 
   color: var(--base03);
   background: var(--base01);
+}
+
+/* Row */
+.row {
+  align-items: flex-center;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+/* Column base */
+.col {
+  flex: 1;
+  min-width: 0; /* Prevents flex items from overflowing */
 }
