--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: "Courier New", monospace;
+  font-family: Verdana, sans-serif;
   overflow: hidden;
   background-color: var(--background);
 }
