--- a/src/plug-ins/properties/style.css
+++ b/src/plug-ins/properties/style.css
@@ -1,6 +1,6 @@
 .properties {
-  --properties-spacing: .1rem;
-  min-width: 16rem;
+  --properties-spacing: .5rem;
+  min-width: 13rem;
   min-height: 8rem;
   z-index: 1000;
 
@@ -15,8 +15,10 @@
 .properties-body {
   color: var(--base1);
 
-  label, .field-description {
+  label {
     font-size: .75rem;
+    padding: .25rem .5rem 0 0;
+
   }
 
   input, select  {
@@ -28,22 +30,13 @@
 
   }
 
-  .row {
-
-    padding: 0 0 var(--properties-spacing);
-  }
-  .col {
-
+  .form-row {
     padding: 0 var(--properties-spacing) ;
+    margin-bottom: 1rem;
   }
 
-  .btn {
-    &.active {
-      background: var(--active);
-      box-shadow: inset 1px 1px 3px 1px rgba(0,0,0,.5);
-    }
-    margin: 0;
+  .field-description {
+    font-size: .6rem;
   }
-
 
 }
